--- a/resources/reimbursement-claims/view/reimbursement-processing.html
+++ b/resources/reimbursement-claims/view/reimbursement-processing.html
@@ -266,18 +266,18 @@
                             <ui-carousel slides="claimReqList" class="" slides-to-show="1" slides-to-scroll="1" initial-slide="0" style="width:100%;margin:0px">
                                 <carousel-item  class="eclaim-item">
                                     <ul>
-                                        <li style="cursor:pointer">
+                                        <li style="cursor:pointer; width:25%">
                                             <span>
                                                 <b>Request Number:</b><span class="currencyTypeCustom" ng-click="toggleJson(item);">#{{item.reqNum}}</span> 
                                             </span>
                                         </li>
-                                        <li>
-                                            <span><b>Claim Status :</b> <span ng-class="{'text-success' : item.status == 'Approved', 'text-danger' : item.status == 'Rejected'}">{{item.status}}</span></span>
+                                        <li style="width:20%">
+                                            <span><b>Claim Status:</b> <span ng-class="{'text-success' : item.status == 'Approved', 'text-danger' : item.status == 'Rejected'}">{{item.status}}</span></span>
                                         </li>    
-                                        <li>
+                                        <li style="width:32%;" class="text-elipsis">
                                             <span><b>Claim Status Reason:</b> <span style="color:#4e5e82">{{item.statusReason}}</span></span>
                                         </li>
-                                        <li>
+                                        <li style="width:20%; text-align:right;">
                                             <span ng-show="item.status == 'Approved'"><b>Approved Amount:</b> <span style="color:#4e5e82;">{{item.approvedAmount}}</span></span>
                                             <span ng-show="item.status == 'Rejected'"><b>Rejected Amount:</b> <span style="color:#4e5e82;">{{item.rejectedAmount}}</span></span>
                                         </li>
@@ -344,7 +344,7 @@
                         </ul>
                     </div>
                 </div>
-                <div ng-class="{'reimbur-trans-hide' : !createNew, 'reimbur-trans-show' : createNew}">
+                <div ng-show="createNew">
                     <div class="claimRequestDetails">
                         <div class="claimRequestDetInner mb-3 clearfix" style="padding-left:0px;">
                             <div layout-gt-sm="row" class="col-sm-12 pb-1">
@@ -498,17 +498,9 @@
                         </div>    
                     </div>
                 </div>                
-                <div class="eclaimRequest text-center mt-4">
+                <div class="eclaimRequest text-center">
                     <div class="clearfix" ng-class="{'reimburs-mt' : createNew}">
-                        <!-- <a href="javascript:;" class="custCheckboxBtn float-left" ng-class="{'custCheckboxBtnSected' : isChecked}" ng-click="toggleSelect();" style="margin: 15px 9px 0px 6px !important;">
-                            <span class="oi" data-glyph="check"></span>
-                        </a> -->
                         <div class="btn-group btn-group-sm claimStatusBtns mt-2 mb-2 pl-1 float-left" role="group" aria-label="Basic example">
-                            <button type="button" class="btn btn-secondary">
-                                <a href="javascript:;" class="custCheckboxBtn float-left" ng-class="{'custCheckboxBtnSected' : isChecked}" ng-click="toggleSelect();">
-                                    <span class="oi" data-glyph="check"></span>
-                                </a>
-                            </button>
                             <button type="button" class="btn btn-secondary">
                                 <span class="oi" data-glyph="check"></span>
                             </button>
@@ -524,17 +516,6 @@
                             <span class="fldsWrap clearfix">
                                 <md-input-container flex-gt-sm style="width:auto !important; background:white; margin:0px;">    
                                     <md-select ng-model="currencyType" ng-change="convertCurrency();">
-                                        <md-option value="1">AED</md-option>
-                                        <md-option value="2">USD</md-option>
-                                        <md-option value="3">EUR</md-option>
-                                    </md-select>
-                                </md-input-container>
-                            </span> 
-                        </div>
-                        <div class="currencyType d-inline-block"><span style="color:white">Base Currency: </span>
-                            <span class="fldsWrap clearfix">
-                                <md-input-container flex-gt-sm style="width:auto !important; background:white; margin:0px;">    
-                                    <md-select ng-model="baseCurrencyType">
                                         <md-option value="1">AED</md-option>
                                         <md-option value="2">USD</md-option>
                                         <md-option value="3">EUR</md-option>
@@ -559,12 +540,17 @@
                         No Record Available...
                     </div>
                 </div>   
-        </div>
+            </div>
+        </div>    
         
         <footer class="clearfix">
             <button type="button" class="btn btn-outline-primary btn-sm float-right ml-3 mt-3" ng-click="submitForApproval();">Submit for Approval</button>
             <button type="button" class="btn btn-outline-primary btn-sm float-right ml-3  mt-3" ng-click="rejectClaim();">Reject</button>
             <ul class="float-right clearfix mt-1">
+                <li class="float-left">
+                    <span>Base Currency</span>
+                    <strong>AED</strong>
+                </li>
                 <li class="float-left">
                     <span>Total deduction</span>
                     <strong>{{totalDeductionAmount | number}}</strong>
@@ -585,7 +571,7 @@
             
             <a href="javascript:;" class="btn-link footerLink mr-3 float-left">
                 <span class="oi" data-glyph="print"></span>
-                Print Rejection
+                Print Package
             </a>
             <a href="javascript:;" class="btn-link footerLink float-left">
                 <span class="oi" data-glyph="envelope-closed"></span>
@@ -593,4 +579,4 @@
             </a>
         </footer>
     </div>
-    </section>
+</section>
