--- a/resources/finalization/view/finalization.html
+++ b/resources/finalization/view/finalization.html
@@ -1,44 +1,12 @@
 <nav class="navbar pt-1 pb-1">
     <span class="navbar-brand p-0 m-0" ui-sref="claim-registration">Finalization</span>
 </nav>
+<div>
+        <my-search-box  search-info="fieldsObject" drop-down="dropDownValue" search-text="searchValue" callback="filterValues(data)"></my-search-box>
+</div>
 <section>
+    
     <div class="leftContainer">
-        <div class="searchBar">
-            <div class="searchBarRow">
-                <div layout-gt-sm="row">
-                    <div class="col-sm-3">
-                        <md-input-container flex-gt-sm>
-                            <label>Payment Reference</label>
-                            <input ng-model="paymentReference">
-                        </md-input-container>
-                    </div>
-                    <div class="col-sm-3" style="border-left: 1px solid #e6e6e6;">
-                        <md-input-container flex-gt-sm>
-                            <label>Payment Way</label>
-                            <md-select ng-model="paymentWay">
-                                    <md-option value="cheque">Cheque</md-option>
-                                    <md-option value="iban">Iban</md-option>
-                            </md-select>
-                         </md-input-container>
-                    </div>
-                    <div class="col-sm-3" style="border-left: 1px solid #e6e6e6;">
-                        <md-input-container flex-gt-sm>
-                            <label>Claim Number</label>
-                            <input ng-model="BatchId">
-                        </md-input-container>
-                    </div>
-
-                    <div class="searchColm align-middle text-center col-sm-3">
-                        <a ng-click="click()" href="javascript:;" class="searBtn searBtnWithText mt-3 ml-3 mr-3 align-middle">
-                            <span class="oi align-middle" data-glyph="magnifying-glass"></span> Search
-                        </a>
-                        <a ng-click="clear()" href="javascript:;" class="searBtn searBtnWithText mt-3 ml-3 mr-3 align-middle">
-                                Clear
-                        </a>
-                  </div>
-                </div>
-            </div>
-        </div>
         <div class="contentPart pt-3 pb-3">
             <div class="">
                 <div class="row">
