--- a/resources/registration/view/registration-general.html
+++ b/resources/registration/view/registration-general.html
@@ -184,14 +184,12 @@
                     </div>
                 </div>
             </div>
-            <div class="fldsWrap clearfix docFont p-3">
-                <b>Documents</b>
-                <div class="row pt-4">
+            <div class="fldsWrap clearfix docFont p-2">
+                <h6>Documents</h6>
+                <div class="row pt-2">
                     <div class="col-sm-3">
-                        <md-input-container flex-gt-sm style="margin:0px;"> 
-                            <label>Type:</label>   
-                            <md-select ng-model="docTypes" multiple="true" ng-change="filterDocuments()" ng-disabled="fileInfos.length == 0">
-                                <!-- <md-option value="all">All</md-option> -->
+                        <md-input-container style="margin:0px;width:100%">
+                            <md-select ng-model="docTypes" multiple="true" ng-change="filterDocuments()" ng-disabled="fileInfos.length == 0" placeholder="Type">
                                 <md-option value="Iban" ng-if="paymentWay == 'iban'">Iban</md-option>
                                 <md-option value="Reimbursement Form">Reimbursement form</md-option>
                                 <md-option value="Medical Bills">Medical bills</md-option>
@@ -201,8 +199,11 @@
                             </md-select>
                         </md-input-container>
                     </div>
-                    <div class="col-sm-9">
-                        <button type="button" class="btn btn-outline-primary btn-sm float-right" ng-click="documentsUpload()">Upload</button>                        
+                    <div class="col-sm-2">
+                        <button type="button" class="btn btn-outline-primary btn-sm p1" ng-click="clearDocFilter()">Clear</button>                                                   
+                    </div>
+                    <div class="col-sm-7">
+                        <button type="button" class="btn btn-outline-primary btn-sm float-right" ng-click="documentsUpload()">Upload</button>
                     </div>
                 </div>                
                 <div ng-if="documents.length > 0 && uploaded" id="thumbnailSlider" ng-style="{'padding-left' : fileInfos.length > 2 ? '15px' : '0px'}" class="col-sm-11">
@@ -255,8 +256,7 @@
                         </carousel-next>
                     </ui-carousel>
                 </div>
-
-                <div ng-if="documents.length == 0" style="text-align: center"> No Documents Found</div>
+                <div ng-if="documents.length == 0" class="pt-5" style="text-align: center"> No Documents Found</div>
             </div>    
             
             <div class="fldsWrap pr-3 pb-2 pt-2 clearfix">
@@ -265,10 +265,10 @@
         </div>
 
     </div>
-    <div class="rightContainer uploadList col-sm-5" ng-if="showUpload">
+    <div class="rightContainer uploadList col-sm-5" ng-if="showUpload" style="height: 95vh;">
         <a href="javascript:;" class="infoToggleBtn" ng-click="toggleInfo();" style="margin-left:17px;position: absolute;top:0"><span class="oi" data-glyph="arrow-right"></span> <br />hide</a>
-        <ui-carousel slides="fileInfos" on-init="onCarouselInit()" slides-to-show="1" slides-to-scroll="1" initial-slide="previewIndex" style="width:98%;height:100%; margin:39px 0px 0px 18px;"
-            infinite="false" name="'previewSlider'" ng-if = "fileInfos.length > 0 && isPreview">
+        <ui-carousel slides="documents" slides-to-show="1" slides-to-scroll="1" initial-slide="previewIndex" style="width:98%;height:100%; margin:39px 0px 0px 18px;"
+            infinite="false" name="'previewSlider'" ng-if = "documents.length > 0 && isPreview">
             <carousel-item>
                <div style="width:96%; padding:5px;">
                     <div ng-show="item.ext != 'docx' && item.ext != 'excel'" style="padding-left:5px;">
