--- a/resources/user-assignment/view/user-assignment.html
+++ b/resources/user-assignment/view/user-assignment.html
@@ -1,8 +1,3 @@
-<style>
-    md-autocomplete .md-show-clear-button button md-icon {
-        left: -160%;
-    }
-</style>
 <nav class="navbar pt-1 pb-1">
     <span class="navbar-brand p-0 m-0">User Assignment</span>
 </nav>
@@ -18,23 +13,23 @@
                             <input ng-model="memberNumber" />
                         </md-input-container>
                     </div>
-                    <div style="border-left: 1px solid #e6e6e6; width: 100% !important;">
+                    <!-- <div style="border-left: 1px solid #e6e6e6; width: 100% !important;">
                         <md-input-container flex-gt-sm>
                             <label style="white-space: pre-line;">Voucher Number</label>
                             <input ng-model="voucherNumber">
                         </md-input-container>
-                    </div>
+                    </div> -->
                     <div style="border-left: 1px solid #e6e6e6; width: 100% !important;">
                         <md-input-container flex-gt-sm>
                             <label style="white-space: pre-line;">Claim Number</label>
                             <input ng-model="climeNo">
                         </md-input-container>
                     </div>
-                    <div style="border-left: 1px solid #e6e6e6; width: 100% !important; position: relative;">
+                    <div style="border-left: 1px solid #e6e6e6; width: 135% !important; position: relative;">
                         <md-icon style="margin-top: 36px; padding-left:5px;">
                                 <i class="oi align-middle" data-glyph="magnifying-glass"></i>
                         </md-icon>
-                        <md-autocomplete class="truncate" flex-gt-sm style="width:80%; top: 0; left: 7px; bottom: 0; right: 0; position: absolute; margin-left: 15px; float: left;"
+                        <md-autocomplete flex-gt-sm style="width:80%; top: 0; left: 7px; bottom: 0; right: 0; position: absolute; margin-left: 15px; float: left;"
                             md-input-name = "Approved By"
                             md-selected-item="approvedBy" 
                             md-search-text="approvedSearchText"
@@ -51,23 +46,23 @@
                             
                         </md-autocomplete>
                     </div>                    
-                    <div style="border-left: 1px solid #e6e6e6; width: 194% !important;">
+                    <div style="border-left: 1px solid #e6e6e6; width: 175% !important;">
                         <md-input-container>
                             <label style="white-space: pre-line;">Request Received From</label>
                             <md-datepicker ng-keyup="clearDatepickerKeyupValue($event);" ng-model="requestedFromDate" md-hide-icons="triangle" md-open-on-focus></md-datepicker>
                         </md-input-container>
                     </div>
-                    <div style="border-left: 1px solid #e6e6e6; width: 190% !important;">
+                    <div style="border-left: 1px solid #e6e6e6; width: 170% !important;">
                         <md-input-container>
                             <label style="white-space: pre-line;">Request Received To</label>
                             <md-datepicker ng-keyup="clearDatepickerKeyupValue($event);" ng-model="requestedToDate" md-hide-icons="triangle" md-open-on-focus></md-datepicker>
                         </md-input-container>
                     </div>
-                    <div style="border-left: 1px solid #e6e6e6; width: 100% !important; position: relative;">
+                    <div style="border-left: 1px solid #e6e6e6; width: 135% !important; position: relative;">
                       <md-icon style="margin-top: 36px; padding-left:5px;">
                           <i class="oi align-middle" data-glyph="magnifying-glass"></i>
                      </md-icon>
-                        <md-autocomplete class="truncate" flex-gt-sm style="width:80%; top: 0; left: 7px; bottom: 0; right: 0; position: absolute; margin-left: 15px; float: left;"
+                        <md-autocomplete flex-gt-sm style="width:80%; top: 0; left: 7px; bottom: 0; right: 0; position: absolute; margin-left: 15px; float: left;"
                             md-input-name = "Assigned User"
                             md-selected-item="assignedUser" 
                             md-search-text="assignedSearchText"
@@ -134,7 +129,7 @@
                                             </div>
                                         </div>
                                         <div class="col-sm-2">
-                                            <div ng-click="selectAll()" class="align-middle selectline"><a href="javascript:;" id="seltAll" style="font-size:75%;float:right;padding-right:10px">{{selectall ? 'De-SelectAll' : 'Select All'}}</a></div>
+                                            <div ng-click="selectAll()" class="align-middle selectline"><a href="javascript:;" id="seltAll" style="font-size:75%;float:right;padding-right:8px">{{selectall ? 'De-SelectAll' : 'Select All'}}</a></div>
                                         </div>
                                     </div>
                                     <table class="table">
